--- a/app/src/main/res/layout/list_row_category.xml
+++ b/app/src/main/res/layout/list_row_category.xml
@@ -14,32 +14,49 @@
         android:orientation="horizontal"
         android:padding="16dp">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/CatBTN"
+            android:layout_width="290dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:id="@+id/categoryRowTitle"
-            android:textSize="14sp"></TextView>
-
-        <ImageView
+            android:orientation="vertical"
+            android:padding="16dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:id="@+id/categoryRowTitle"
+                android:textSize="18sp"></TextView>
+            <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/catgColorDisplay"
             android:layout_marginStart="8dp"
             android:src="@drawable/ic_catgcolor"></ImageView>
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/catgEditBTN"
-            android:layout_marginStart="8dp"
-            android:src="@drawable/ic_edit"></ImageView>
+        </LinearLayout>
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/catgDeleteBTN"
-            android:layout_marginStart="8dp"
-            android:src="@drawable/ic_delete"></ImageView>
+
+       <LinearLayout
+
+           android:layout_width="wrap_content"
+           android:layout_height="match_parent"
+           android:orientation="vertical"
+           android:padding="16dp"
+           >
+           <ImageView
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:id="@+id/catgEditBTN"
+               android:layout_marginStart="16dp"
+               android:src="@drawable/ic_edit"></ImageView>
+
+           <ImageView
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:id="@+id/catgDeleteBTN"
+               android:layout_marginStart="16dp"
+               android:src="@drawable/ic_delete"></ImageView>
+       </LinearLayout>
+
 
     </LinearLayout>
 
